fixes homepage avatar position on mobile

--- a/assets/sass/avatar.scss
+++ b/assets/sass/avatar.scss
@@ -1,6 +1,6 @@
 img#about_author_avatar {
   width: 100%;
-  max-width: 150px;
+  max-width: 155px;
   border-radius: 100%;
   border: 4px black solid;
   margin: 0 auto;
