--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -1,20 +1,22 @@
 /* homepage sections */
 
-#homepage #about p {
-  text-align: left;
-  max-width: 500px;
-}
+#homepage {
+  #about p {
+    text-align: left;
+    max-width: 500px;
+  }
 
-#homepage #goals p {
-  text-align: left;
-}
+  #goals p {
+    text-align: left;
+  }
 
-#homepage #goals .material-icons {
-  height: 3rem;
-  width: 3rem;
-  font-size: 3.25rem;
-}
+  #goals .material-icons {
+    height: 3rem;
+    width: 3rem;
+    font-size: 3.25rem;
+  }
 
-// #homepage #goals .material-icons:hover {
+// #goals .material-icons:hover {
 //   color: $mui-primary-color;
 // }
+}
